{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 380,
  "lineage": "9fa14927-becc-96ec-1edc-9a0477fd67f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-05ffd3d3ef17ee043",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc-eoigw"
            },
            "tags_all": {
              "Name": "vpc-eoigw"
            },
            "vpc_id": "vpc-06f1a08bba642759b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-063953778d3b43a63",
            "arn": "arn:aws:ec2:eu-west-1:362013706298:instance/i-0265326bde39cb65f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0265326bde39cb65f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "fck-nat-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06fff7155f422423c"
              }
            ],
            "primary_network_interface_id": "eni-06fff7155f422423c",
            "private_dns": "ip-10-0-1-82.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.82",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08c4ba90a37b63a6d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1bb809d2af9dc4a",
            "tags": {
              "Name": "private-ubuntu-app"
            },
            "tags_all": {
              "Name": "private-ubuntu-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00a30c5f0a35eb6fb"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "362013706298",
            "id": "i-0265326bde39cb65f",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_key_pair.nat_instance",
            "aws_security_group.private_sg",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.azs",
            "tls_private_key.nat_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:362013706298:internet-gateway/igw-0779f4784b3011ab8",
            "id": "igw-0779f4784b3011ab8",
            "owner_id": "362013706298",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc-igw"
            },
            "tags_all": {
              "Name": "vpc-igw"
            },
            "vpc_id": "vpc-06f1a08bba642759b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:362013706298:route-table/rtb-034204fa8ca21fc72",
            "id": "rtb-034204fa8ca21fc72",
            "owner_id": "362013706298",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-05ffd3d3ef17ee043",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0f4deb5d748baafaa",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rtb"
            },
            "tags_all": {
              "Name": "private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f1a08bba642759b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "362013706298",
            "id": "rtb-034204fa8ca21fc72",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.egress",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:362013706298:route-table/rtb-0bbdc13fd46f6e573",
            "id": "rtb-0bbdc13fd46f6e573",
            "owner_id": "362013706298",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "eigw-05ffd3d3ef17ee043",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0779f4784b3011ab8",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "public-rtb"
            },
            "tags_all": {
              "Name": "public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f1a08bba642759b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "362013706298",
            "id": "rtb-0bbdc13fd46f6e573",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.egress",
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2daa3a373f135a5",
            "region": "eu-west-1",
            "route_table_id": "rtb-034204fa8ca21fc72",
            "subnet_id": "subnet-0a1bb809d2af9dc4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.egress",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffc99cb161401d43",
            "region": "eu-west-1",
            "route_table_id": "rtb-0bbdc13fd46f6e573",
            "subnet_id": "subnet-0781930ff216dd04a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.egress",
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fck_nat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:362013706298:security-group/sg-07d1184d294eaa08b",
            "description": "Allow traffic from VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d1184d294eaa08b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "fck-nat-sg",
            "name_prefix": "",
            "owner_id": "362013706298",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f1a08bba642759b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "362013706298",
            "id": "sg-07d1184d294eaa08b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:362013706298:security-group/sg-00a30c5f0a35eb6fb",
            "description": "Allow internal traffic only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a30c5f0a35eb6fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-ubuntu-sg",
            "name_prefix": "",
            "owner_id": "362013706298",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg"
            },
            "tags_all": {
              "Name": "private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f1a08bba642759b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "362013706298",
            "id": "sg-00a30c5f0a35eb6fb",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:362013706298:subnet/subnet-0a1bb809d2af9dc4a",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1bb809d2af9dc4a",
            "ipv6_cidr_block": "2a05:d018:63:f301::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-093ceada498094268",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362013706298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "ipv6-subnet"
            },
            "tags_all": {
              "Name": "ipv6-subnet"
            },
            "vpc_id": "vpc-06f1a08bba642759b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "362013706298",
            "id": "subnet-0a1bb809d2af9dc4a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:362013706298:subnet/subnet-0781930ff216dd04a",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0781930ff216dd04a",
            "ipv6_cidr_block": "2a05:d018:63:f300::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0dd4099735bd6a2f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "362013706298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "ipv6-subnet"
            },
            "tags_all": {
              "Name": "ipv6-subnet"
            },
            "vpc_id": "vpc-06f1a08bba642759b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "362013706298",
            "id": "subnet-0781930ff216dd04a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:362013706298:vpc/vpc-06f1a08bba642759b",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c70c0f2c999371b5",
            "default_route_table_id": "rtb-0ec88e72cb07fc919",
            "default_security_group_id": "sg-0a90b2f7c25768d1c",
            "dhcp_options_id": "dopt-05d63af7b6f34bb26",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f1a08bba642759b",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0dea0d25ff6997c80",
            "ipv6_cidr_block": "2a05:d018:63:f300::/56",
            "ipv6_cidr_block_network_border_group": "eu-west-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec88e72cb07fc919",
            "owner_id": "362013706298",
            "region": "eu-west-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "362013706298",
            "id": "vpc-06f1a08bba642759b",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}